--- a/project/pom.xml
+++ b/project/pom.xml
@@ -8,11 +8,11 @@
         <version>2.7.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.kanbansim</groupId>
-    <artifactId>KanbanBoard</artifactId>
+    <groupId>com.kanbanboard</groupId>
+    <artifactId>Kanbansim</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>KanbanBoard</name>
-    <description>KanbanBoard</description>
+    <name>Kanbansim</name>
+    <description>Kanbansim</description>
     <properties>
         <java.version>17</java.version>
     </properties>
