--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/KanbanSimulationDatabase
 spring.datasource.username=root
-spring.datasource.password=toor1337
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 
@@ -8,8 +8,3 @@ spring.main.allow-circular-references=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.maxHttpHeaderSize = 10240
-
-
-app.jwtCookieName= KanbanSimID
-app.jwtSecret= KanbanSimSecretKey
-app.jwtExpirationMs= 86400000
