--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.main.allow-circular-references=true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 server.maxHttpHeaderSize = 10240
+logging.level.org.springframework.security=DEBUG
