--- a/project/src/main/resources/application.properties
+++ b/project/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/KanbanSimulationDatabase
+spring.jpa.hibernate.ddl-auto=none
+spring.datasource.url=jdbc:mysql://localhost:3306/kanbanjavadb
 spring.datasource.username=root
 spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-
-## Hibernate Properties
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
